El jefe de jefes was here!

--- a/about.html
+++ b/about.html
@@ -5,11 +5,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, shrink-to-fit=no">
   <meta name="author" content="jbenit">
-  <meta name="description" content="  Keidas Technology es una empresa en crecimiento con más de un año manufacturando
-    circuitos digitales e involucrandose en el desarrollo e implementación tecnológica. Nuestra
-    visión es alcanzar un alto nivel de producción de PCB’s (circuitos impresos) e impresión 3D
-    manteniendo una excelente calidad y respuesta inmediata para satisfacer a nuestros
-    clientes, particulares e institucionales.">
+  <meta name="description" content="Somos una empresa mexicana dedicada al desarrollo e implementación tecnológica, contamos
+    con áreas específicas de desarrollo como son: Fabricación de Placas de Circuitos Impresos, Impresión 3D, Desarrollo de
+    Software e Integración de proyectos.">
   <meta name="keywords" content="Keidas Technology, KeidasTechnology">
 
   <!-- Google Font -->
@@ -50,7 +48,7 @@
                 Servicios
               </a>
               <div class="dropdown-menu bg-dark" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item text-white" href="services_pcb.html">Manufactura de PCBs</a>
+                <a class="dropdown-item text-white" href="services_pcb.html">Manufactura de PCB</a>
                 <a class="dropdown-item text-white" href="services_3d.html">Impresión 3D</a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item text-white" href="projects.html">Proyectos</a>
@@ -69,15 +67,17 @@
   <section>
     <div class="jumbotron bg-dark text-light">
       <div class="container">
-        <h1 class="display-4">Keidas Technology</h1>
-        <p class="lead text-justify">Somos una empresa en crecimiento con más de un año manufacturando
-                          circuitos digitales e involucrándose en el desarrollo e implementación tecnológica. Nuestra
-                          visión es alcanzar un alto nivel de producción de PCB’s (circuitos impresos) e impresión 3D
-                          manteniendo una excelente calidad y respuesta inmediata para satisfacer a nuestros
-                          clientes, particulares e institucionales.</p>
-        <!-- <hr class="my-4"> -->
-        <!-- <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-        <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a> -->
+        <div class="row align-items-center">
+          <div class="col-lg-4 d-flex justify-content-center">
+            <img src="images/site/kt_k_logo.png" class="ktimg d-none d-lg-block">
+          </div>
+          <div class="col-lg-8">
+              <p class="lead text-justify">Somos una empresa mexicana dedicada al desarrollo e implementación tecnológica, contamos
+                con áreas específicas de desarrollo como son: Fabricación de Placas de Circuitos Impresos, Impresión 3D, Desarrollo de
+                Software e Integración de proyectos.
+              </p>
+            </div>
+        </div>
       </div>
     </div>
   </section>
@@ -89,16 +89,17 @@
     <div class="container marketing">
       <!-- START THE FEATURETTES -->
 
+      <h2 class="text-primary text-bold">Eventos y patrocinios</h2>
+
       <hr class="featurette-divider">
 
-      <div class="row featurette text-light">
+      <div class="row align-items-center text-light">
         <div class="col-lg-6">
-          <!-- <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It’ll blow your mind.</span> -->
           </h2>
-          <p class="lead text-justify text-gray">El equipo de Keidas Technology participó como aliado del <span class="text-bold text-light">Hackathon</span> organizado por
-            <span class="text-bold text-light">Talent Network</span> en <span class="text-bold text-light">Talent Land 2019</span> el evento de tecnología mas grande del año,
-            donde impartimos varios talleres sobre manufactura con CNC e Impresión 3D. Además fabricamos piezas para los participantes
-            del Reto 24 Horas.</p>
+          <p class="lead text-justify text-gray">El equipo de Keidas Technology participó como aliado del <span class="text-bold text-light">Hackathon</span>
+            organizado por <span class="text-bold text-light">Talent Network</span> en <span class="text-bold text-light">Talent Land 2019</span> el evento de
+            tecnología más grande del año, donde impartimos varios talleres sobre <span class="text-bold text-light">Manufactura con CNC e Impresión 3D</span>.
+            Además, fabricamos piezas para los participantes del Reto 24 Horas.</p>
         </div>
         <div class="col-lg-6">
           <!-- Image slider -->
@@ -134,13 +135,12 @@
 
       <hr class="featurette-divider">
 
-      <div class="row featurette text-light">
+      <div class="row align-items-center text-light">
         <div class="col-lg-6 order-lg-2">
-          <!-- <h2 class="featurette-heading">UNAM Motorsports!!
-            <span class="text-muted">It’ll blow your mind.</span>
-          </h2> -->
-          <p class="lead text-justify text-gray">Keidas Technology forma parte de los patrocinadores del equipo de UNAM Motorsports que es
-            una escudería integrada por estudiantes de la Facultad de Ingeniería y del Centro de Investigación de Diseño Industrial de la UNAM.</p>
+          <p class="lead text-justify text-gray">Keidas Technology forma parte de los patrocinadores del equipo de <span class="text-bold text-light">UNAM
+            Motorsports</span> que es una escudería integrada por estudiantes de la <span class="text-bold text-light">Facultad de Ingeniería</span> y del
+            <span class="text-bold text-light">Centro de Investigación de Diseño Industrial</span> de la <span class="text-bold text-light">UNAM</span>.
+          </p>
         </div>
         <div class="col-lg-6 order-lg-1">
           <!-- Image slider -->
@@ -170,9 +170,8 @@
 
       <hr class="featurette-divider">
 
-      <!-- Three columns of text below the carousel -->
       <div class="">
-        <h3 class="text-primary text-bold">Areas de aplicación</h3>
+        <h2 class="text-primary text-bold">Areas de aplicación</h2>
       </div>
       <div class="row center">
         <div class="col-lg-4 p-xl-4">
@@ -182,8 +181,8 @@
           </div>
           <br>
           <h2 class="text-light text-bold text-center">Manufactura</h2>
-          <p class="text-justify text-gray">Contamos con más de un año manufacturando con diversas maquinas, como son Router CNC, Impresoras 3D
-          con tecnología FDM y DLP.</p>
+          <p class="text-justify text-gray">Somos expertos en el manejo de maquinas como Router CNC e Impresoras 3D con tecnología FDM y DLP.
+          </p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4 p-xl-4">
           <div class="text-center">
@@ -192,8 +191,9 @@
           </div>
           <br>
           <h2 class="text-light text-bold text-center">Software</h2>
-          <p class="text-justify text-gray">Multiples soluciones de software nos respaldan, desde aplicaciones moviles y paginas web, hasta
-          complejas implementaciones de software en secretarías e industrias.</p>
+          <p class="text-justify text-gray">Múltiples soluciones de software nos respaldan, desde aplicaciones móviles y páginas web, hasta
+            complejas implementaciones de software en secretarías e industria privada.
+          </p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4 p-xl-4">
           <div class="text-center">
@@ -202,8 +202,9 @@
           </div>
           <br>
           <h2 class="text-light text-bold text-center">Educación</h2>
-          <p class="text-justify text-gray">Compartir el conocimiento con la comunidad es un aspecto importante jaja ya no se que mas poner
-            hay que ver este pedo en la junta :v.</p>
+          <p class="text-justify text-gray">Contamos con tutoriales y cursos relacionados a las actividades que realizamos con el fin de
+            acercar y facilitar la información a la comunidad.
+          </p>
         </div><!-- /.col-lg-4 -->
       </div><!-- /.row -->
       <hr class="featurette-divider container">
@@ -240,7 +241,7 @@
             <i class="fab fa-whatsapp px-2"></i> 55-67-84-50-17
           </div>
           <div class="p-2">
-            <a target="_blank" rel="noopener noreferrer" href="https://www.messenger.com/t/KeidasTechnology"><i class="fab fa-facebook-messenger px-2"></i> Messenger</a>
+            <a target="_blank" rel="noopener noreferrer" href="https://www.messenger.com/t/KeidasTechnology"><i class="fab fa-facebook-messenger px-2 obj-zoom-in"></i> Messenger</a>
           </div>
         </div>
       </div>
@@ -250,7 +251,7 @@
           <a class="nav-link text-light" href="#">Preguntas Frecuentes</a>
         </div>
         <div class="col-lg-6 flex-column justify-content-center">
-          <a class="nav-link text-light" href="#">Terminos y condiciones</a>
+          <a class="nav-link text-light" href="#">Términos y Condiciones</a>
         </div>
       </div>
     </div>
