--- a/index.html
+++ b/index.html
@@ -5,11 +5,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, shrink-to-fit=no">
   <meta name="author" content="jbenit">
-  <meta name="description" content="  Keidas Technology es una empresa en crecimiento con más de un año manufacturando
-    circuitos digitales e involucrandose en el desarrollo e implementación tecnológica. Nuestra
-    visión es alcanzar un alto nivel de producción de PCB’s (circuitos impresos) e impresión 3D
-    manteniendo una excelente calidad y respuesta inmediata para satisfacer a nuestros
-    clientes, particulares e institucionales.">
+  <meta name="description" content="Somos una empresa mexicana dedicada al desarrollo e implementación tecnológica, contamos
+    con áreas específicas de desarrollo como son: Fabricación de Placas de Circuitos Impresos, Impresión 3D, Desarrollo de
+    Software e Integración de proyectos.">
   <meta name="keywords" content="Keidas Technology, KeidasTechnology">
 
   <!-- Google Font -->
@@ -50,7 +48,7 @@
                 Servicios
               </a>
               <div class="dropdown-menu bg-dark" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item text-white" href="services_pcb.html">Manufactura de PCBs</a>
+                <a class="dropdown-item text-white" href="services_pcb.html">Manufactura de PCB</a>
                 <a class="dropdown-item text-white" href="services_3d.html">Impresión 3D</a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item text-white" href="projects.html">Proyectos</a>
@@ -114,7 +112,7 @@
         </div>
         <div class="col-lg-6 my-3">
           <div class="card bg-dark text-white p-4">
-            <h4 class="card-title d-sm-none text-center">Manufactura de PCBs</h4>
+            <h4 class="card-title d-sm-none text-center">Manufactura de PCB's</h4>
             <div class="row align-items-center">
               <div class="col-sm-6 content">
                 <img src="images/site/pcb_01.png" class="img-fluid img-thumbnail my-2 my-sm-0" alt="">
@@ -124,19 +122,19 @@
               </div>
             </div>
             <div class="card-body">
-              <h4 class="card-title d-none d-sm-block">Manufactura de PCBs</h4>
-              <p class="card-text d-none d-sm-block">Manufactura de PCB's (máximo dos caras) con acabado de cobre. Ideal para prototipos y entregas rápidas. O bien
-              con Solder Mask, SilkScreen, conexión entre vías y acabado de estaño. Para proyectos que requieren más seriedad y profesionalismo.</p>
+              <h4 class="card-title d-none d-sm-block">Manufactura de PCB</h4>
+              <p class="card-text d-none d-sm-block">Manufactura de PCB (máximo dos caras) con acabado de cobre. Ideal para prototipos y entregas rápidas. O bien
+              con Solder Mask, Silk Screen, conexión entre vías y acabado de estaño. Para proyectos que requieren más seriedad y profesionalismo.</p>
               <a href="services_pcb.html" class="btn btn-outline-primary"><i class="fa fa-microchip"></i>&nbsp  Ver Detalles</a>
             </div>
           </div>
         </div>
         <div class="col-lg-6 my-3">
           <div class="card bg-dark text-white p-4">
-            <h4 class="card-title d-sm-none text-center">Proyectos en General</h4>
+            <h4 class="card-title d-sm-none text-center">Implementación Tecnológica</h4>
             <img src="images/site/it.png" class="card-img-top rounded img-thumbnail" alt="...">
             <div class="card-body">
-              <h4 class="card-title d-none d-sm-block">Proyectos en General</h4>
+              <h4 class="card-title d-none d-sm-block">Implementación Tecnológica</h4>
               <p class="card-text d-none d-sm-block">Si tienes algún proyecto o idea y no sabes por donde comenzar acércate a nosotros, podemos
                 asesorarte y pasar de una idea a un proyecto completo y funcional.</p>
               <a href="projects.html" class="btn btn-outline-primary"><i class="fas fa-code"></i>&nbsp  Ver Detalles</a>
@@ -149,7 +147,7 @@
             <img src="images/site/kt_team_crop.png" class="card-img-top rounded img-thumbnail" alt="...">
             <div class="card-body">
               <h4 class="card-title d-none d-sm-block">Acerca de Keidas Technology</h4>
-              <p class="card-text d-none d-sm-block">Conoce mas sobre nosotros</p>
+              <p class="card-text d-none d-sm-block">Conoce más sobre nosotros.</p>
               <a href="about.html" class="btn btn-outline-primary"><i class="fas fa-user"></i>&nbsp  Ver Detalles</a>
             </div>
           </div>
@@ -197,7 +195,7 @@
           <a class="nav-link text-light" href="#">Preguntas Frecuentes</a>
         </div>
         <div class="col-lg-6 flex-column justify-content-center">
-          <a class="nav-link text-light" href="#">Terminos y condiciones</a>
+          <a class="nav-link text-light" href="#">Términos y Condiciones</a>
         </div>
       </div>
     </div>
