--- a/services_pcb.html
+++ b/services_pcb.html
@@ -5,11 +5,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, shrink-to-fit=no">
   <meta name="author" content="jbenit">
-  <meta name="description" content="  Keidas Technology es una empresa en crecimiento con más de un año manufacturando
-    circuitos digitales e involucrandose en el desarrollo e implementación tecnológica. Nuestra
-    visión es alcanzar un alto nivel de producción de PCB’s (circuitos impresos) e impresión 3D
-    manteniendo una excelente calidad y respuesta inmediata para satisfacer a nuestros
-    clientes, particulares e institucionales.">
+  <meta name="description" content="Somos una empresa mexicana dedicada al desarrollo e implementación tecnológica, contamos
+    con áreas específicas de desarrollo como son: Fabricación de Placas de Circuitos Impresos, Impresión 3D, Desarrollo de
+    Software e Integración de proyectos.">
   <meta name="keywords" content="Keidas Technology, KeidasTechnology">
 
   <!-- Google Font -->
@@ -50,7 +48,7 @@
                 Servicios
               </a>
               <div class="dropdown-menu bg-dark" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item active text-white" href="#">Manufactura de PCBs</a>
+                <a class="dropdown-item active text-white" href="#">Manufactura de PCB</a>
                 <a class="dropdown-item text-white" href="services_3d.html">Impresión 3D</a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item text-white" href="projects.html">Proyectos</a>
@@ -67,15 +65,14 @@
 
   <!-- Main content -->
 
-  <!-- <div class="container marketing team"> -->
   <section id="main">
     <div class="content-fluid marketing team printing">
       <div class="container marketing">
         <!-- START THE FEATURETTES -->
-          <h2 class="text-center text-light text-bold">Manufactura de PCBs</h2>
+          <h2 class="text-primary text-bold">Manufactura de PCB</h2>
         <hr class="featurette-divider">
 
-        <div class="row featurette text-light">
+        <div class="row align-items-center text-light">
           <div class="col-lg-6">
             <h2 class="featurette-heading"><span class="text-muted text-bold">Prototipo Rápido</span>
             </h2>
@@ -115,12 +112,12 @@
 
         <hr class="featurette-divider">
 
-        <div class="row featurette">
+        <div class="row align-items-center">
           <div class="col-lg-6 order-lg-2">
             <h2 class="featurette-heading text-light"><span class="text-muted text-bold">Acabado Profesional</span>
             </h2>
             <br>
-            <p class="lead text-justify text-gray">Manufactura de PCB's (máximo dos caras) con Solder Mask, SilkScreen
+            <p class="lead text-justify text-gray">Manufactura de PCB's (máximo dos caras) con Solder Mask, Silk Screen
                             y acabado de estaño. Para proyectos que requieren
                             más seriedad y profesionalismo.</p>
           </div>
@@ -158,12 +155,11 @@
     </div><!-- /.content-fluid -->
 
     <div class="team">
-      <div class="text-light text-center">
+      <div class="container text-primary">
         <h3 class="text-bold">Especificaciones para manufactura</h3>
         <hr class="featurette-divider container">
       </div>
       <div class="text-gray container">
-        <!-- <h5 class="text-bold">Modelado por Deposición Fundida:</h5> -->
       </div>
       <table class="container rounded table table-striped table-dark">
         <thead>
@@ -182,12 +178,8 @@
             <td>0.25[mm]</td>
           </tr>
           <tr>
-            <td>Diámetro mínimo de perforación</td>
-            <td>0.4[mm]</td>
-          </tr>
-          <tr>
-            <td>Diámetro máximo de perforación</td>
-            <td>3[mm]</td>
+            <td>Diámetros de perforación</td>
+            <td>0.4[mm] - 3[mm]</td>
           </tr>
         </tbody>
       </table>
@@ -234,7 +226,7 @@
           <a class="nav-link text-light" href="#">Preguntas Frecuentes</a>
         </div>
         <div class="col-lg-6 flex-column justify-content-center">
-          <a class="nav-link text-light" href="#">Terminos y condiciones</a>
+          <a class="nav-link text-light" href="#">Términos y Condiciones</a>
         </div>
       </div>
     </div>
