--- a/projects.html
+++ b/projects.html
@@ -5,11 +5,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, shrink-to-fit=no">
   <meta name="author" content="jbenit">
-  <meta name="description" content="  Keidas Technology es una empresa en crecimiento con más de un año manufacturando
-    circuitos digitales e involucrandose en el desarrollo e implementación tecnológica. Nuestra
-    visión es alcanzar un alto nivel de producción de PCB’s (circuitos impresos) e impresión 3D
-    manteniendo una excelente calidad y respuesta inmediata para satisfacer a nuestros
-    clientes, particulares e institucionales.">
+  <meta name="description" content="Somos una empresa mexicana dedicada al desarrollo e implementación tecnológica, contamos
+    con áreas específicas de desarrollo como son: Fabricación de Placas de Circuitos Impresos, Impresión 3D, Desarrollo de
+    Software e Integración de proyectos.">
   <meta name="keywords" content="Keidas Technology, KeidasTechnology">
 
   <!-- Google Font -->
@@ -50,7 +48,7 @@
                 Servicios
               </a>
               <div class="dropdown-menu bg-dark" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item text-white" href="services_pcb.html">Manufactura de PCBs</a>
+                <a class="dropdown-item text-white" href="services_pcb.html">Manufactura de PCB</a>
                 <a class="dropdown-item text-white" href="services_3d.html">Impresión 3D</a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item active text-white" href="#">Proyectos</a>
@@ -75,7 +73,7 @@
       <div class="row">
         <div class="col-lg-4">
           <div class="card bg-dark text-white mb-4 shadow-sm">
-            <video autoplay="true" loop="true" width="100%">
+            <video autoplay loop="true" width="100%">
               <source src="images/videos/p_pi_vid.mp4">
             </video>
             <div class="card-body">
@@ -93,7 +91,7 @@
           <div class="card bg-dark text-white mb-4 shadow-sm">
             <img class="img-fluid" src="images/site/p_mm_front.png" alt="">
             <div class="card-body">
-              <p class="card-text">Aplicacion Android para el calculo de proporcionamieto de mezclas de concreto, incluye modo básico y modo pro.</p>
+              <p class="card-text">Aplicación Android para el cálculo de proporcionamiento de mezclas de concreto, incluye modo básico y modo pro.</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
                   <button id="btn2" type="button" class="btn btn-sm btn-outline-primary" onclick="clickg(this.id)">Fotos</button>
@@ -105,14 +103,14 @@
         </div>
         <div class="col-lg-4">
           <div class="card bg-dark text-white mb-4 shadow-sm">
-            <img class="img-fluid" src="images/site/s3d_r_01.png" alt="">
+            <img class="img-fluid" src="images/site/kt_team_crop_square.png" alt="">
             <div class="card-body">
-              <p class="card-text">Software para realizar el Fallo en Licitaciones publicas de manera ágil y sencilla.</p>
+              <p class="card-text">Software para realizar el Fallo en Licitaciones públicas de manera ágil y sencilla.</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
                   <button id="btn3" type="button" class="btn btn-sm btn-outline-primary" onclick="clickg(this.id)">Fotos</button>
                 </div>
-                <small class="text-muted">Software Development</small>
+                <small class="text-muted">Desarrollo de Software</small>
               </div>
             </div>
           </div>
@@ -120,33 +118,33 @@
 
         <div class="col-lg-4">
           <div class="card bg-dark text-white mb-4 shadow-sm">
-            <img class="img-fluid" src="images/site/p_rs_front.png" alt="">
+            <img class="img-fluid" src="images/site/p_rs_01.png" alt="">
             <div class="card-body">
-              <p class="card-text">Robót Scara de 3 Grados de Libertad con motores a pasos e impresion 3D.</p>
+              <p class="card-text">Robot Scara de 3 Grados de Libertad con motores a pasos e impresión 3D.</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
                   <button id="btn4" type="button" class="btn btn-sm btn-outline-primary" onclick="clickg(this.id)">Fotos</button>
                 </div>
-                <small class="text-muted">9 mins</small>
+                <small class="text-muted">Robótica</small>
               </div>
             </div>
           </div>
         </div>
         <div class="col-lg-4">
           <div class="card bg-dark text-white mb-4 shadow-sm">
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+            <img class="img-fluid" src="images/site/p_rm_01.png" alt="">
             <div class="card-body">
               <p class="card-text">Robot seguidor de línea e identificador de colores para concurso de Robótica (Talent Network) en Campus Party 2017.</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button id="btn5" type="button" class="btn btn-sm btn-outline-light" onclick="clickg(this.id)">Fotos</button>
+                  <button id="btn5" type="button" class="btn btn-sm btn-outline-primary" onclick="clickg(this.id)">Fotos</button>
                 </div>
-                <small class="text-muted">9 mins</small>
+                <small class="text-muted">Robots Móviles</small>
               </div>
             </div>
           </div>
         </div>
-        <div class="col-lg-4">
+        <!-- <div class="col-lg-4">
           <div class="card bg-dark text-white mb-4 shadow-sm">
             <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
             <div class="card-body">
@@ -205,7 +203,7 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
   </div>
@@ -249,7 +247,7 @@
           <a class="nav-link text-light" href="#">Preguntas Frecuentes</a>
         </div>
         <div class="col-lg-6 flex-column justify-content-center">
-          <a class="nav-link text-light" href="#">Terminos y condiciones</a>
+          <a class="nav-link text-light" href="#">Términos y Condiciones</a>
         </div>
       </div>
     </div>
@@ -303,6 +301,57 @@
           <span class="sr-only">Previous</span>
         </a>
         <a class="carousel-control-next" href="#carousel_02" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+    </div>
+  </section>
+
+  <!-- Robot Scara -->
+  <section id="btn4_imgslider" class="container d-none islider">
+    <div>
+      <div id="carousel_03" width="500" class="carousel slide carousel-fade" data-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active" data-interval="7000">
+            <img src="images/site/p_rs_02.png" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item" data-interval="7000">
+            <img src="images/site/p_rs_03.png" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item" data-interval="7000">
+            <img src="images/site/p_rs_01.png" class="d-block w-100" alt="...">
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carousel_03" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carousel_03" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+    </div>
+  </section>
+
+  <!-- Robot Movil -->
+  <section id="btn5_imgslider" class="container d-none islider">
+    <div>
+      <div id="carousel_04" width="500" class="carousel slide carousel-fade" data-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active" data-interval="7000">
+            <img src="images/site/p_rm_02.png" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item" data-interval="7000">
+            <img src="images/site/p_rm_01.png" class="d-block w-100" alt="...">
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carousel_04" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carousel_04" role="button" data-slide="next">
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="sr-only">Next</span>
         </a>
