--- a/services_3d.html
+++ b/services_3d.html
@@ -5,11 +5,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, shrink-to-fit=no">
   <meta name="author" content="jbenit">
-  <meta name="description" content="  Keidas Technology es una empresa en crecimiento con más de un año manufacturando
-    circuitos digitales e involucrandose en el desarrollo e implementación tecnológica. Nuestra
-    visión es alcanzar un alto nivel de producción de PCB’s (circuitos impresos) e impresión 3D
-    manteniendo una excelente calidad y respuesta inmediata para satisfacer a nuestros
-    clientes, particulares e institucionales.">
+  <meta name="description" content="Somos una empresa mexicana dedicada al desarrollo e implementación tecnológica, contamos
+    con áreas específicas de desarrollo como son: Fabricación de Placas de Circuitos Impresos, Impresión 3D, Desarrollo de
+    Software e Integración de proyectos.">
   <meta name="keywords" content="Keidas Technology, KeidasTechnology">
 
   <!-- Google Font -->
@@ -50,7 +48,7 @@
                 Servicios
               </a>
               <div class="dropdown-menu bg-dark" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item text-white" href="services_pcb.html">Manufactura de PCBs</a>
+                <a class="dropdown-item text-white" href="services_pcb.html">Manufactura de PCB</a>
                 <a class="dropdown-item active text-white" href="#">Impresión 3D</a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item text-white" href="projects.html">Proyectos</a>
@@ -67,24 +65,23 @@
 
   <!-- Main content -->
 
-  <!-- <div class="container marketing team"> -->
   <section id="main">
     <div class="content-fluid marketing team printing">
       <div class="container marketing">
         <!-- START THE FEATURETTES -->
-          <h2 class="text-center text-light text-bold">Impresión 3D</h2>
+          <h2 class="text-primary text-bold">Impresión 3D</h2>
         <hr class="featurette-divider">
 
-        <div class="row featurette text-light">
+        <div class="row align-items-center text-light">
           <div class="col-lg-6">
             <h2 class="featurette-heading"><span class="text-muted text-bold">Fused Deposition Modeling (FDM)</span>
             </h2>
             <br>
-            <p class="lead text-justify text-gray">Contamos con servicio de <span class="text-light text-bold">Impresion 3D</span> en
-              <span class="text-light text-bold">Modelado por Deposición Fundida</span>, que es el método mas popular de impresion 3D,
+            <p class="lead text-justify text-gray">Contamos con servicio de <span class="text-light text-bold">Impresión 3D</span> en
+              <span class="text-light text-bold">Modelado por Deposición Fundida</span>, que es el método más popular de impresión 3D,
               el cual consiste en crear el modelo por capas de abajo hacia arriba depositando el material fundido en cada capa. Los
-              materiales mas utilizados son termo-plasticos como el <span class="text-light text-bold">PLA, ABS y PETG</span>, los
-              cuales tienen propiedades mecanicas que si se combinan con un buen diseño, pueden alcanzar un alto grado de utilidad.</p>
+              materiales más utilizados son termoplásticos como el <span class="text-light text-bold">PLA, ABS y PETG</span>, los
+              cuales tienen propiedades mecánicas que, si se combinan con un buen diseño, pueden alcanzar un alto grado de utilidad.</p>
           </div>
           <div class="col-lg-6">
             <!-- Image slider -->
@@ -117,16 +114,16 @@
 
         <hr class="featurette-divider">
 
-        <div class="row featurette">
+        <div class="row align-items-center">
           <div class="col-lg-6 order-lg-2">
             <h2 class="featurette-heading text-light"><span class="text-muted text-bold">Digital Light Processing (DLP)</span>
             </h2>
             <br>
-            <p class="lead text-justify text-gray">También contamos con servicio de <span class="text-light text-bold">Impresion 3D</span> en
-              <span class="text-light text-bold">Procesamiento Digital de Luz</span>. En éste proceso tambien se contruye el modelo por capas,
+            <p class="lead text-justify text-gray">También contamos con servicio de <span class="text-light text-bold">Impresión 3D</span> en
+              <span class="text-light text-bold">Procesamiento Digital de Luz</span>. En este proceso también se construye el modelo por capas,
               sin embargo, a diferencia del Modelado por Deposición Fundida, en este método se utiliza una pantalla de Luz UV que ilumina la
               capa correspondiente y solidifica la <span class="text-light text-bold">Resina Fotosensible</span> contenida en una tina especial;
-              con esta tecnología se pueden conseguir impresiones muy precisas y pequeñas, llegando a una resolucion de 50 micrómetros.</p>
+              con esta tecnología se pueden conseguir impresiones muy precisas y pequeñas, llegando a una resolución de 50 micrómetros.</p>
           </div>
           <div class="col-lg-6 order-lg-1">
             <!-- Image slider -->
@@ -156,11 +153,12 @@
 
         <hr class="featurette-divider">
 
-        <div class="row featurette">
+        <div class="row align-items-center">
           <div class="col-lg-6">
-            <h2 class="featurette-heading"><span class="text-muted text-bold">Post-procesado</span></h2>
+            <h2 class="featurette-heading"><span class="text-muted text-bold">Postprocesado</span></h2>
+            <br>
             <p class="lead text-gray text-justify">Las pizas de Impresión 3D pueden someterse a procesos de postprocesado para lograr acabados superficiales
-              mas esteticos o para agregar resistencia a las piezas, cada proceso depende del material y del uso final que se quiera
+              más estéticos o para agregar resistencia a las piezas, cada proceso depende del material y del uso final que se quiera
               para cada pieza.</p>
           </div>
           <div class="col-lg-6">
@@ -194,7 +192,7 @@
     </div><!-- /.content-fluid -->
 
     <div class="team">
-      <div class="text-light text-center">
+      <div class="container text-primary">
         <h3 class="text-bold">Especificaciones para manufactura</h3>
         <hr class="featurette-divider container">
       </div>
@@ -214,12 +212,8 @@
             <td>300x300x400[mm]</td>
           </tr>
           <tr>
-            <td>Ancho máximo de capa</td>
-            <td>0.3[mm]</td>
-          </tr>
-          <tr>
-            <td>Ancho mínimo de capa</td>
-            <td>0.1[mm]</td>
+            <td>Ancho de capa</td>
+            <td>0.1[mm] - 0.3[mm]</td>
           </tr>
           <tr>
             <td>Materiales</td>
@@ -244,12 +238,8 @@
             <td>115x65x155[mm]</td>
           </tr>
           <tr>
-            <td>Ancho máximo de capa</td>
-            <td>0.1[mm]</td>
-          </tr>
-          <tr>
-            <td>Ancho mínimo de capa</td>
-            <td>0.05[mm]</td>
+            <td>Ancho de capa</td>
+            <td>0.05[mm] - 0.1[mm]</td>
           </tr>
           <tr>
             <td>Resolución XY</td>
@@ -304,7 +294,7 @@
           <a class="nav-link text-light" href="#">Preguntas Frecuentes</a>
         </div>
         <div class="col-lg-6 flex-column justify-content-center">
-          <a class="nav-link text-light" href="#">Terminos y condiciones</a>
+          <a class="nav-link text-light" href="#">Términos y Condiciones</a>
         </div>
       </div>
     </div>
