Still on testing

--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
 
   <!-- jumbotron -->
   <section>
-    <div class="jumbotron bg-dark text-light">
+    <div class="jumbotron text-light">
       <div class="container">
         <div class="row align-items-center">
           <div class="col-lg-4 d-flex justify-content-center">
@@ -99,7 +99,7 @@
           <p class="lead text-justify text-gray">El equipo de Keidas Technology participó como aliado del <span class="text-bold text-light">Hackathon</span>
             organizado por <span class="text-bold text-light">Talent Network</span> en <span class="text-bold text-light">Talent Land 2019</span> el evento de
             tecnología más grande del año, donde impartimos varios talleres sobre <span class="text-bold text-light">Manufactura con CNC e Impresión 3D</span>.
-            Además, fabricamos piezas para los participantes del Reto 24 Horas.</p>
+            Además, fabricamos piezas para los participantes del Hackathon.</p>
         </div>
         <div class="col-lg-6">
           <!-- Image slider -->
