--- a/services_3d.html
+++ b/services_3d.html
@@ -187,71 +187,79 @@
           </div>
         </div>
 
+        <br>
+        <hr>
+        <div class="container text-primary">
+          <h3 class="text-bold">Especificaciones para manufactura</h3>
+          <!-- <hr class="featurette-divider container"> -->
+          <br>
+        </div>
+        <div class="text-gray container">
+          <h5 class="text-bold">Modelado por Deposición Fundida:</h5>
+        </div>
+        <table class="container table table-striped table-dark">
+          <thead>
+            <tr>
+              <th scope="col">Parámetro</th>
+              <th scope="col">Valor</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Tamaño máximo de impresión</td>
+              <td>300x300x400[mm]</td>
+            </tr>
+            <tr>
+              <td>Ancho de capa</td>
+              <td>0.1[mm] - 0.3[mm]</td>
+            </tr>
+            <tr>
+              <td>Materiales</td>
+              <td>PLA, PETG, ABS</td>
+            </tr>
+          </tbody>
+        </table>
+        <br>
+        <div class="text-gray container">
+          <h5 class="text-bold">Procesamiento Digital de Luz:</h5>
+        </div>
+        <table class="container table table-striped table-dark">
+          <thead>
+            <tr>
+              <th scope="col">Parámetro</th>
+              <th scope="col">Valor</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Tamaño máximo de impresión</td>
+              <td>115x65x155[mm]</td>
+            </tr>
+            <tr>
+              <td>Ancho de capa</td>
+              <td>0.05[mm] - 0.1[mm]</td>
+            </tr>
+            <tr>
+              <td>Resolución XY</td>
+              <td>0.047[mm]</td>
+            </tr>
+            <tr>
+              <td>Materiales</td>
+              <td>Resina Fotosensible</td>
+            </tr>
+          </tbody>
+        </table>
+
+        <br>
+        <hr>
+
         <!-- /END THE FEATURETTES -->
       </div><!-- /.container -->
     </div><!-- /.content-fluid -->
 
-    <div class="team">
-      <div class="container text-primary">
-        <h3 class="text-bold">Especificaciones para manufactura</h3>
-        <hr class="featurette-divider container">
-      </div>
-      <div class="text-gray container">
-        <h5 class="text-bold">Modelado por Deposición Fundida:</h5>
-      </div>
-      <table class="container table table-striped table-dark">
-        <thead>
-          <tr>
-            <th scope="col">Parámetro</th>
-            <th scope="col">Valor</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>Tamaño máximo de impresión</td>
-            <td>300x300x400[mm]</td>
-          </tr>
-          <tr>
-            <td>Ancho de capa</td>
-            <td>0.1[mm] - 0.3[mm]</td>
-          </tr>
-          <tr>
-            <td>Materiales</td>
-            <td>PLA, PETG, ABS</td>
-          </tr>
-        </tbody>
-      </table>
-      <br>
-      <div class="text-gray container">
-        <h5 class="text-bold">Procesamiento Digital de Luz:</h5>
-      </div>
-      <table class="container table table-striped table-dark">
-        <thead>
-          <tr>
-            <th scope="col">Parámetro</th>
-            <th scope="col">Valor</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>Tamaño máximo de impresión</td>
-            <td>115x65x155[mm]</td>
-          </tr>
-          <tr>
-            <td>Ancho de capa</td>
-            <td>0.05[mm] - 0.1[mm]</td>
-          </tr>
-          <tr>
-            <td>Resolución XY</td>
-            <td>0.047[mm]</td>
-          </tr>
-          <tr>
-            <td>Materiales</td>
-            <td>Resina Fotosensible</td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
+    <!-- <div class="team">
+
+    </div> -->
 
   </section>
 
