--- a/services_pcb.html
+++ b/services_pcb.html
@@ -150,40 +150,47 @@
           </div>
         </div>
 
+        <br>
+        <hr>
+
+        <div class="container text-primary">
+          <h3 class="text-bold">Especificaciones para manufactura</h3>
+          <br>
+          <!-- <hr class="featurette-divider container"> -->
+        </div>
+        <div class="text-gray container">
+        </div>
+        <table class="container rounded table table-striped table-dark">
+          <thead>
+            <tr>
+              <th scope="col">Parámetro</th>
+              <th scope="col">Valor</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Ancho mínimo de pista</td>
+              <td>0.25[mm]</td>
+            </tr>
+            <tr>
+              <td>Separación mínima entre pistas</td>
+              <td>0.25[mm]</td>
+            </tr>
+            <tr>
+              <td>Diámetros de perforación</td>
+              <td>0.4[mm] - 3[mm]</td>
+            </tr>
+          </tbody>
+        </table>
+        <br>
+        <hr>
         <!-- /END THE FEATURETTES -->
       </div><!-- /.container -->
     </div><!-- /.content-fluid -->
 
-    <div class="team">
-      <div class="container text-primary">
-        <h3 class="text-bold">Especificaciones para manufactura</h3>
-        <hr class="featurette-divider container">
-      </div>
-      <div class="text-gray container">
-      </div>
-      <table class="container rounded table table-striped table-dark">
-        <thead>
-          <tr>
-            <th scope="col">Parámetro</th>
-            <th scope="col">Valor</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>Ancho mínimo de pista</td>
-            <td>0.25[mm]</td>
-          </tr>
-          <tr>
-            <td>Separación mínima entre pistas</td>
-            <td>0.25[mm]</td>
-          </tr>
-          <tr>
-            <td>Diámetros de perforación</td>
-            <td>0.4[mm] - 3[mm]</td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
+    <!-- <div class="team">
+
+    </div> -->
 
   </section>
 
