--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   </div>
 
   <!-- Image slider -->
-  <div id="carouselExampleInterval" class="carousel slide carousel-fade" data-ride="carousel">
+  <!-- <div id="carouselExampleInterval" class="carousel slide carousel-fade" data-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active" data-interval="7000">
         <img src="images/site/CoverV01.png" class="d-block w-100" alt="...">
@@ -84,6 +84,32 @@
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="sr-only">Next</span>
     </a>
+  </div> -->
+
+  <div class="flux" id="top_imgslider">
+    <div class="container">
+      <div id="carouselExampleInterval" class="carousel slide carousel-fade" data-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active" data-interval="7000">
+            <img src="images/site/CoverV01.png" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item" data-interval="7000">
+            <img src="images/site/CoverV02.png" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item" data-interval="7000">
+            <img src="images/site/CoverV03.png" class="d-block w-100" alt="...">
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleInterval" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleInterval" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+    </div>
   </div>
 
   <!-- Main content -->
