--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
       <hr>
       <div class="row text-center align-items-center py-2">
         <div class="col-lg-6 flex-column justify-content-center">
-          <a class="nav-link text-light" href="#">Preguntas Frecuentes</a>
+          <a class="nav-link text-light" href="questions.html">Preguntas Frecuentes</a>
         </div>
         <div class="col-lg-6 flex-column justify-content-center">
           <a class="nav-link text-light" href="#">Términos y Condiciones</a>
