--- a/questions.html
+++ b/questions.html
@@ -73,7 +73,7 @@
 
       <hr class="featurette-divider">
       <br>
-      <img src="images/site/diagram.png" class="mx-auto d-block" alt="">
+      <img src="images/site/diagram.png" class="mx-auto d-block" width="100%" alt="">
       <br>
       <h3 class="text-bold text-gray">En general</h3>
       <br>
