Testinggit status! XD

--- a/questions.html
+++ b/questions.html
@@ -154,6 +154,10 @@
             <td>0.1[mm] - 0.3[mm]</td>
           </tr>
           <tr>
+            <td>Tolerancia dimensional</td>
+            <td>&plusmn 0.1[mm]</td>
+          </tr>
+          <tr>
             <td>Materiales</td>
             <td>PLA, PETG, ABS</td>
           </tr>
@@ -182,6 +186,10 @@
           <tr>
             <td>Resolución XY</td>
             <td>0.047[mm]</td>
+          </tr>
+          <tr>
+            <td>Tolerancia dimensional</td>
+            <td>&plusmn 0.05[mm]</td>
           </tr>
           <tr>
             <td>Materiales</td>
@@ -240,6 +248,10 @@
           <tr>
             <td>Diámetros de perforación</td>
             <td>0.4[mm] - 3[mm]</td>
+          </tr>
+          <tr>
+            <td>Tolerancia dimensional</td>
+            <td>&plusmn 0.1[mm]</td>
           </tr>
         </tbody>
       </table>
