--- a/services_3d.html
+++ b/services_3d.html
@@ -214,6 +214,10 @@
               <td>0.1[mm] - 0.3[mm]</td>
             </tr>
             <tr>
+              <td>Tolerancia dimensional</td>
+              <td>&plusmn 0.1[mm]</td>
+            </tr>
+            <tr>
               <td>Materiales</td>
               <td>PLA, PETG, ABS</td>
             </tr>
@@ -242,6 +246,10 @@
             <tr>
               <td>Resolución XY</td>
               <td>0.047[mm]</td>
+            </tr>
+            <tr>
+              <td>Tolerancia dimensional</td>
+              <td>&plusmn 0.05[mm]</td>
             </tr>
             <tr>
               <td>Materiales</td>
