--- a/services_pcb.html
+++ b/services_pcb.html
@@ -180,6 +180,10 @@
               <td>Diámetros de perforación</td>
               <td>0.4[mm] - 3[mm]</td>
             </tr>
+            <tr>
+              <td>Tolerancia dimensional</td>
+              <td>&plusmn 0.1[mm]</td>
+            </tr>
           </tbody>
         </table>
         <br>
