--- a/questions.html
+++ b/questions.html
@@ -73,7 +73,8 @@
 
       <hr class="featurette-divider">
       <br>
-      <img src="images/site/diagram.png" class="mx-auto d-block" width="100%" alt="">
+      <img src="images/site/diagram_h.png" class="mx-auto d-none d-md-block" width="90%" alt="">
+      <img src="images/site/diagram_v.png" class="mx-auto d-block d-md-none" width="70%" alt="">
       <br>
       <h3 class="text-bold text-gray">En general</h3>
       <br>
