--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
   <link rel="stylesheet" href="stylesheets/jbenit.css">
   <!-- Font Awesome -->
   <script src="https://kit.fontawesome.com/0721c2930d.js"></script>
+  <!-- Icon -->
+  <link rel="shortcut icon" href="images/ico/kt_k_logo.png">
 
     <title>Keidas Technology</title>
 </head>
