--- a/services_pcb.html
+++ b/services_pcb.html
@@ -79,9 +79,14 @@
             <h2 class="featurette-heading"><span class="text-muted text-bold">Prototipo Rápido</span>
             </h2>
             <br>
-            <p class="lead text-justify text-gray"> Manufactura de PCB's (máximo dos caras) con acabado de cobre.
-                            Ideal para prototipos y entregas rápidas, no hay conexión de vías
-                            y no incluye Solder Mask.</p>
+            <p class="lead text-justify text-gray"> Manufactura de
+              <span data-toggle="tooltip" data-html="true" data-placement="right" title="Placa de circuito impreso" class="text-light text-bold">PCB's</span>
+              (máximo dos caras) con acabado de cobre. Ideal para prototipos y entregas rápidas, no hay conexión de vías y no incluye
+              <span data-toggle="tooltip" data-html="true" data-placement="right" title="Una máscara de soldadura es una capa de lacado que reciben
+              las placas de circuito impreso para proteger zonas de la capa de cobre donde no se desea aplicar pasta de soldadura en placas con
+              tecnología SMD o THT. Previene la aparición de cortocircuitos y protege el cobre de la corrosión y otros agentes externos. Normalmente
+              incluye un tinte que le da una coloración verde; aunque también está disponible en otros colores como rojo o azul" class="text-light text-bold">Solder Mask</span>.
+            </p>
           </div>
           <div class="col-lg-6">
             <!-- Image slider -->
