--- a/index.html
+++ b/index.html
@@ -110,8 +110,7 @@
             <div class="card-body">
               <h4 class="card-title d-none d-sm-block">Impresión 3D</h4>
               <p class="card-text d-none d-sm-block">Diseño y manufactura de piezas prototipo y funcionales fabricados con diversas tecnologías como FDM
-                 (Fused Deposition Modeling) y DLP (Digital Light Processing) en materiales como PLA, ABS, PETG, Filamento Flexible y Resina
-                 Fotosensible.</p>
+                 (Fused Deposition Modeling) y DLP (Digital Light Processing) en materiales como PLA, ABS, PETG, Filamento Flexible y Resina.</p>
               <a href="services_3d.html" class="btn btn-outline-primary"><i class="fas fa-cube"></i>&nbsp  Ver Detalles</a>
             </div>
           </div>
@@ -130,7 +129,7 @@
             <div class="card-body">
               <h4 class="card-title d-none d-sm-block">Manufactura de PCB</h4>
               <p class="card-text d-none d-sm-block">Manufactura de PCB (máximo dos caras) con acabado de cobre. Ideal para prototipos y entregas rápidas. O bien
-              con Solder Mask, Silk Screen, conexión entre vías y acabado de estaño. Para proyectos que requieren más seriedad y profesionalismo.</p>
+              con Solder Mask, Silk Screen y acabado de estaño. Para proyectos que requieren más seriedad y profesionalismo.</p>
               <a href="services_pcb.html" class="btn btn-outline-primary"><i class="fa fa-microchip"></i>&nbsp  Ver Detalles</a>
             </div>
           </div>
