--- a/services_3d.html
+++ b/services_3d.html
@@ -79,10 +79,27 @@
             <h2 class="featurette-heading"><span class="text-muted text-bold">Fused Deposition Modeling (FDM)</span>
             </h2>
             <br>
-            <p class="lead text-justify text-gray">Contamos con servicio de <span class="text-light text-bold">Impresión 3D</span> en
+            <p class="lead text-justify text-gray">Contamos con servicio de
+              <span data-toggle="tooltip" data-placement="auto" title="La impresión 3D, también conocida como manufactura por adición,
+              es un proceso por el cual se crean objetos físicos colocando un material por capas en base a un modelo digital." class="text-light text-bold">
+                Impresión 3D
+              </span>
+              en
               <span class="text-light text-bold">Modelado por Deposición Fundida</span>, que es el método más popular de impresión 3D,
               el cual consiste en crear el modelo por capas de abajo hacia arriba depositando el material fundido en cada capa. Los
-              materiales más utilizados son termoplásticos como el <span class="text-light text-bold">PLA, ABS y PETG</span>, los
+              materiales más utilizados son termoplásticos como el
+              <span data-toggle="tooltip" data-placement="auto" title="El ácido poliláctico (PLA) es un termoplástico biodegradable, hecho a base de recursos
+              renovables como el almidón de maíz o la caña de azúcar. Aparte de usarse en la impresión 3D, lo podemos ver principalmente en implantes médicos,
+              envases de alimentos y vajillas desechables. " class="text-light text-bold">
+              PLA</span>,
+              <span data-toggle="tooltip" data-placement="auto" title="El acrilonitrilo butadieno estireno (ABS) es un termoplástico derivado del petróleo,
+              que se encuentra comúnmente en sistemas de tuberías (DWV), en revestimientos de automóviles, en cascos y en juguetes como Lego. Los objetos impresos
+              con filamento ABS cuentan con una resistencia, flexibilidad y durabilidad ligeramente más elevadas que la de los objetos fabricados con filamento PLA." class="text-light text-bold">
+              ABS</span> y
+              <span data-toggle="tooltip" data-placement="auto" title="el PETG, que es una versión modificada del PET. La “G” viene de “glicolizado”,
+              ya que se añade a la composición del material durante la polimerización. El resultado es un filamento que es más translúcido, altamente resistente
+              a los golpes, más duradero, y más fácil de usar que el PET convencional." class="text-light text-bold">
+              PETG</span>, los
               cuales tienen propiedades mecánicas que, si se combinan con un buen diseño, pueden alcanzar un alto grado de utilidad.</p>
           </div>
           <div class="col-lg-6">
@@ -124,7 +141,10 @@
             <p class="lead text-justify text-gray">También contamos con servicio de <span class="text-light text-bold">Impresión 3D</span> en
               <span class="text-light text-bold">Procesamiento Digital de Luz</span>. En este proceso también se construye el modelo por capas,
               sin embargo, a diferencia del Modelado por Deposición Fundida, en este método se utiliza una pantalla de Luz UV que ilumina la
-              capa correspondiente y solidifica la <span class="text-light text-bold">Resina Fotosensible</span> contenida en una tina especial;
+              capa correspondiente y solidifica la
+              <span data-toggle="tooltip" data-position="auto" title="Son fotopolímeros líquidos sensibles a la luz, también conocidas como resinas
+              fotográficas que se solidifican cuando se exponen a haces de luz específicos." class="text-light text-bold">Resina Fotosensible</span>
+              contenida en una tina especial;
               con esta tecnología se pueden conseguir impresiones muy precisas y pequeñas, llegando a una resolución de 50 micrómetros.</p>
           </div>
           <div class="col-lg-6 order-lg-1">
