--- a/services_pcb.html
+++ b/services_pcb.html
@@ -80,12 +80,16 @@
             </h2>
             <br>
             <p class="lead text-justify text-gray"> Manufactura de
-              <span data-toggle="tooltip" data-html="true" data-placement="right" title="Placa de circuito impreso" class="text-light text-bold">PCB's</span>
+              <span data-toggle="tooltip" data-placement="auto" title="Printed Circuit Board o Placa de circuito impreso es una superficie
+              constituida por caminos o pistas de material conductor (cobre) laminadas sobre una base no conductora (FR4)." class="text-light text-bold">
+                PCB's
+              </span>
               (máximo dos caras) con acabado de cobre. Ideal para prototipos y entregas rápidas, no hay conexión de vías y no incluye
-              <span data-toggle="tooltip" data-html="true" data-placement="right" title="Una máscara de soldadura es una capa de lacado que reciben
-              las placas de circuito impreso para proteger zonas de la capa de cobre donde no se desea aplicar pasta de soldadura en placas con
-              tecnología SMD o THT. Previene la aparición de cortocircuitos y protege el cobre de la corrosión y otros agentes externos. Normalmente
-              incluye un tinte que le da una coloración verde; aunque también está disponible en otros colores como rojo o azul" class="text-light text-bold">Solder Mask</span>.
+              <span data-toggle="tooltip" data-placement="auto" title="Solder Mask o Máscara Antisoldante es una capa de lacado que se
+              aplica a las PCB's para proteger zonas de cobre donde no se desea aplicar soldadura. Previene la aparición de cortocircuitos y protege el
+              cobre de la corrosión y otros agentes externos. Generalmente es color verde, aunque existen otros colores como azul y rojo." class="text-light text-bold">
+                Solder Mask
+              </span>.
             </p>
           </div>
           <div class="col-lg-6">
@@ -124,9 +128,20 @@
             <h2 class="featurette-heading text-light"><span class="text-muted text-bold">Acabado Profesional</span>
             </h2>
             <br>
-            <p class="lead text-justify text-gray">Manufactura de PCB's (máximo dos caras) con Solder Mask, Silk Screen
-                            y acabado de estaño. Para proyectos que requieren
-                            más seriedad y profesionalismo.</p>
+            <p class="lead text-justify text-gray">Manufactura de PCB's (máximo dos caras) con Solder Mask,
+              <span data-toggle="tooltip" data-placement="auto" title="Es una capa impresa o grabada en laser donde aparecen
+              los componentes de la PCB para facilitar el ensamble, puede indicar puntos de posición, orientación
+              , referencia o cualquier cosa que el diseñador requiera." class="text-light text-bold">
+                Silk Screen
+              </span>
+              y
+              <span data-toggle="tooltip" data-placement="auto" title="La PCB puede recibir un baño de estaño sobre los Pads,
+              dicho estaño previene la corrosión y facilita el soldado de los componentes." class="text-light text-bold">
+                acabado de estaño
+              </span>
+               (no hay conexión de vías).
+              Para proyectos que requieren
+              más seriedad y profesionalismo.</p>
           </div>
           <div class="col-lg-6 order-lg-1">
             <!-- Image slider -->
